--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "kallel",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "consign": "^0.1.2",
+    "ejs": "^2.5.2",
+    "express": "^4.17.1",
+    "express-validator": "^2.20.8"
+  }
 }
