--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "consign": "^0.1.2",
     "ejs": "^2.5.5",
     "express": "^4.17.1",
-    "express-validator": "^2.20.8"
+    "express-validator": "^2.20.8",
+    "socket.io": "^2.0.3"
   }
 }
